Fix: -change banner image -spacing issue in reservation and contact us page

--- a/src/main.css
+++ b/src/main.css
@@ -11,7 +11,7 @@ body {
 }
 
 * {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter', 'Poppins', sans-serif;
 }
 
 #root,
